# testcocoon

./: CMakeLists.txt  README.TXT
cppunit-1.12.0/config/: ax_cxx_gcc_abi_demangle.m4
cppunit-1.12.0/examples/: CoverageScannerListener.h  examples.dsw  examples.sln
cppunit-1.12.0/examples/ClockerPlugIn/: ClockerPlugIn.dsp
cppunit-1.12.0/examples/DumperPlugIn/: DumperPlugIn.dsp
doc/: CMakeLists.txt  CppUnitListener.cpp  CxxTestListener.cpp  bench.sh  bench_athlon.tex  bench_pentium_m.tex  bench_via.tex  codesize.sh  codesize.tex  coveragebrowsertutorial.tex  customiofile.c  customiosftp.c  download.tex  eclipse.tex  faq.tex  googletest.cpp  index.ist  license.tex  overview.tex  pdfdata.txt  pdflayout.tex  sort.c  testcocoon.tex  testcocoon_qt_tutorial.tex  testcocoondownload.tex  testcocooneclipse.tex  testcocoonlicense.tex  testcocoonoverview.tex  testcocoonvisualdsp.tex  testcoverageobject.cpp  testcoverageobject.h  tutorial.tex  visualdsp.c  visualdsp.tex
doc/epsfiles/: addinmanager.eps  addinsettings.eps
src/: AUTHORS  CMakeLists.txt  config.cmake
src/TestCocoonVs2005AddIn/: TestCocoonVs2005AddIn.sln  TestCocoonVs2008AddIn.sln  TestCocoonVs2010AddIn.sln
src/TestCocoonVs2005AddIn/TestCocoonVs2005AddIn/: AssemblyInfo.cs  BuildModeGenerationGUI.cs  BuildModeGenerationGUI.resx  Connect.cs  Settings.cs  TestCocoon.cs  TestCocoonVs2005AddIn.AddIn  TestCocoonVs2005AddIn.csproj  TestCocoonVs2008AddIn.AddIn  TestCocoonVs2008AddIn.csproj  TestCocoonVs2010AddIn.AddIn  TestCocoonVs2010AddIn.csproj
src/TestCocoonVs2005AddIn/TestCocoonVs2005AddIn/Properties/: Resources.Designer.cs  Resources.resx
src/TestCocoonVs2005AddIn/TestCocoonVs2005AddInSetup/: TestCocoonVs2005AddInSetup.vdproj
src/cmcsexeimport/: CMakeLists.txt  cmcsexeimport.cpp
src/cmmerge/: CMakeLists.txt  cmmerge.cpp
src/cmreport/: CMakeLists.txt  cmreport.cpp
src/commoncode/: common.cmake  commonglobal.h  debug.cmake  install.cmake  version.cmake  version.h.cmake  version.nsh.cmake  version.sh.cmake
src/coveragebrowser/: CMakeLists.txt  coveragebrowser.cpp  coveragebrowser.qrc  coveragebrowser.rc  testcocoon_logo.icns
src/coveragescanner/: CMakeLists.txt  ar.cspro  cc21k.cspro  ccblkfn.cspro  ccts.cspro  cl.cspro  cl.embedded.cspro  clarm.cspro  clmips.cspro  clsh.cspro  clthumb.cspro  copybin.bat  coveragescanner.cpp  csc.cspro  g++.cspro  gcc.cspro  gmcs.cspro  gxx.cspro  icc.cspro  icl.cspro  icpc.cspro  ld.cspro  lib.cspro  libtool.cspro  link.cspro  mcs.cspro  ranlib.sh
src/libcmcsexeimport/: CMakeLists.txt  cmcsexeimport_args.cpp  cmcsexeimport_args.h  cmcsexeimportpdef.h
src/libcmmerge/: CMakeLists.txt  cmmerge_args.cpp  cmmerge_args.h
src/libcmreport/: CMakeLists.txt  cmreport_args.cpp  cmreport_args.h  cmreportpdef.h  executionselection.cpp  executionselection.h  globalcoverage.cpp  globalcoverage.h
src/libcoveragebrowser/: CMakeLists.txt  CoverageSettings.cpp  CoverageSettings.h  ExecutionListDelegate.cpp  ExecutionListDelegate.h  ExecutionListModel.cpp  ExecutionListModel.h  ExecutionListView.cpp  ExecutionListView.h  French.ts  FunctionListModel.cpp  FunctionListModel.h  FunctionListView.cpp  FunctionListView.h  German.ts  IdleEvent.cpp  IdleEvent.h  MatchExpr.cpp  MatchExpr.h  ModuleListModel.cpp  ModuleListModel.h  ModuleListView.cpp  ModuleListView.h  ProgresBar.cpp  ProgresBar.h  SortFilterProxy.cpp  SortFilterProxy.h  TreeList.cpp  TreeList.h  TreeListModel.cpp  TreeListModel.h  WComment.cpp  WComment.h  WCommentUI.ui  WCommentWidget.cpp  WCommentWidget.h  WCommentWidgetUI.ui  WExecutionDelete.cpp  WExecutionDelete.h  WExecutionList.cpp  (+114 more)
src/libcoveragescanner/: CMakeLists.txt  argv.cpp  argv.h  c_cpp_libgen.cpp  c_cpp_libgen.h  c_cs_cpp_parser.h  c_cs_cpp_parser.l  c_cs_cpp_parser.y  c_cs_cpp_parser_lex_debug.cxx  c_cs_cpp_parser_lex_release.cxx  c_cs_cpp_parser_yacc_debug.cxx  c_cs_cpp_parser_yacc_debug.hxx  c_cs_cpp_parser_yacc_release.cxx  c_cs_cpp_parser_yacc_release.hxx  compiler.cpp  compiler.h  compilerfactory.cpp  compilerfactory.h  compilerinterface.cpp  compilerinterface.h  compilerwrapper.cpp  compilerwrapper.h  compilerwrapperenumoption.cpp  compilerwrapperenumoption.h  compilerwrapperintoption.cpp  compilerwrapperintoption.h  compilerwrapperlanguageoption.cpp  compilerwrapperlanguageoption.h  compilerwrapperlistoption.cpp  compilerwrapperlistoption.h  compilerwrapperoption.cpp  compilerwrapperoption.h  compilerwrapperoptionpool.cpp  compilerwrapperoptionpool.h  compilerwrapperregexpoption.cpp  compilerwrapperregexpoption.h  compilerwrappertextoption.cpp  compilerwrappertextoption.h  conflict.sh  coveragescanner_main.cpp  (+269 more)
src/libcsmes/: CMakeLists.txt  crc.cpp  crc.h  csmesfile.cpp  csmesfile.h  debug.cpp  debug.h  fileinfo.cpp  fileinfo.h  getoption.cpp  getoption.h  hexcoder.cpp  hexcoder.h  libcsmespdef.h  ms_dirent.cpp  ms_dirent.h  stringtool.cpp  stringtool.h  system.cpp  system.h  system_linux.cpp  system_macos.cpp  system_unix.cpp  system_win32.cpp  tmpfile.cpp  tmpfile.h
src/libinstrumentation/: CMakeLists.txt  FileSystemWatcher.cpp  FileSystemWatcher.h  French.ts  FunctionInfo.cpp  FunctionInfo.h  German.ts  Service.cpp  Service.h  TextSourceInstrumentationData.cpp  TextSourceInstrumentationData.h  accesslocker.cpp  accesslocker.h  csexe_parser.cpp  csexe_parser.h  csexe_parser.l  csexe_parser.y  csexe_parser_driver.cpp  csexe_parser_driver.h  csexe_parser_lex.cxx  csexe_parser_lex_release.cxx  csexe_parser_yacc.cxx  csexe_parser_yacc.hxx  csexe_parser_yacc_release.cxx  csexe_parser_yacc_release.hxx  csmes.cpp  csmes.h  csmesanalysis.cpp  csmesanalysis.h  csmescomment.cpp  csmescomment.h  csmescsv.cpp  csmescsv.h  csmesemma.cpp  csmesemma.h  csmesexecution.cpp  csmesexecution.h  csmesfilethread.cpp  csmesfilethread.h  csmesfunctioninfo.cpp  (+45 more)
src/toolselector/: CMakeLists.txt  WMain.ui  WMainUI.cpp  WMainUI.h  cygwin.cpp  cygwin.h  intelcompiler.cpp  intelcompiler.h  mingw.cpp  mingw.h  msys.cpp  msys.h  notools.cpp  notools.h  tools.cpp  tools.h  toolselector.cpp  toolselector.qrc  toolselector.rc  visualstudio.cpp  visualstudio.h
tutorial/: build.sh
(+22 files in other folders)
